committing chnaged to notebook

--- a/Evictions_2017-2.ipynb
+++ b/Evictions_2017-2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For my full findings, figure captions, etc. please view my report on Authorea:\n",
+    "https://www.authorea.com/343201/d3O9pidMDlFnRdrC2CMeNA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -213,7 +221,7 @@
     }
    ],
    "source": [
-    "evics.shape"
+    "evics.shape #checking shape"
    ]
   },
   {
@@ -223,7 +231,8 @@
    "outputs": [],
    "source": [
     "# need to extract date, first turn into datetime object since it is just an object \n",
-    "evics.EXECUTED_DATE = pd.to_datetime(evics.EXECUTED_DATE, errors='coerce')"
+    "evics.EXECUTED_DATE = pd.to_datetime(evics.EXECUTED_DATE, \n",
+    "                                     errors='coerce')"
    ]
   },
   {
@@ -284,7 +293,9 @@
    ],
    "source": [
     "len(evics17.EVICTION_ZIP.unique())\n",
-    "# number of unique zip codes"
+    "# number of unique zip codes\n",
+    "# not all zipcodes are represented, which in theory seems plausible: \n",
+    "# not all zipcodes will have evictions"
    ]
   },
   {
@@ -294,7 +305,8 @@
    "outputs": [],
    "source": [
     "# grouping evictions by zipcode\n",
-    "evics17_a = evics17[['COURT_INDEX_NUMBER', 'EVICTION_ZIP']].groupby(by='EVICTION_ZIP').count()"
+    "evics17_a = evics17[['COURT_INDEX_NUMBER', \n",
+    "                     'EVICTION_ZIP']].groupby(by='EVICTION_ZIP').count()"
    ]
   },
   {
@@ -305,6 +317,13 @@
    "source": [
     "# reseting index\n",
     "evics_b = evics17_a.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 'evics_b' represents the number of evictions per zip code in 2017"
    ]
   },
   {
@@ -502,7 +521,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nyczips.ZIPCODE = nyczips.ZIPCODE.astype(int)"
+    "nyczips.ZIPCODE = nyczips.ZIPCODE.astype(int) #making sure types are similar for merge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merging shapefile with eviction data"
    ]
   },
   {
@@ -511,7 +537,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evic_geo = pd.merge(nyczips, evics_b, left_on='ZIPCODE', right_on='EVICTION_ZIP')"
+    "evic_geo = pd.merge(nyczips, evics_b, left_on='ZIPCODE', \n",
+    "                    right_on='EVICTION_ZIP')"
    ]
   },
   {
@@ -695,7 +722,7 @@
     }
    ],
    "source": [
-    "evic_geo.shape"
+    "evic_geo.shape # we gained three zipcodes from eviction df"
    ]
   },
   {
@@ -704,7 +731,8 @@
    "source": [
     "# Pluto Data\n",
     "\n",
-    "- To download PLUTO data, uncomment cellblock below."
+    "- To download PLUTO data, uncomment cellblock below.\n",
+    "- I am using PLUTO to get a count of the total number of units in a zipcode in order to normalize the evictions by zipcode"
    ]
   },
   {
@@ -792,7 +820,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Merging with eviction + zipcode shapefile"
+    "# Merging with eviction + pluto data "
    ]
   },
   {
@@ -978,7 +1006,8 @@
    ],
    "source": [
     "## Merging with evic_geo\n",
-    "evic_pluto = pd.merge(evic_geo, pluto_cts2, left_on='ZIPCODE', right_on='ZipCode')\n",
+    "evic_pluto = pd.merge(evic_geo, pluto_cts2, left_on='ZIPCODE', \n",
+    "                      right_on='ZipCode')\n",
     "evic_pluto.head()"
    ]
   },
@@ -986,7 +1015,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# More cleaning"
+    "# Removing/renaming columns, creating ratios"
    ]
   },
   {
@@ -996,7 +1025,8 @@
    "outputs": [],
    "source": [
     "# only retaining columns of interest\n",
-    "evicR = evic_pluto[['ZIPCODE', 'POPULATION', 'COUNTY', 'geometry', 'COURT_INDEX_NUMBER', 'UnitsTotal']]"
+    "evicR = evic_pluto[['ZIPCODE', 'POPULATION', 'COUNTY', \n",
+    "                    'geometry', 'COURT_INDEX_NUMBER', 'UnitsTotal']]"
    ]
   },
   {
@@ -1018,7 +1048,8 @@
    ],
    "source": [
     "# renaming columns\n",
-    "cols = {'ZIPCODE':'zipcode', 'POPULATION':'pop', 'COUNTY':'county', 'geometry':'geometry', 'COURT_INDEX_NUMBER':'evictions',\n",
+    "cols = {'ZIPCODE':'zipcode', 'POPULATION':'pop', 'COUNTY':'county', \n",
+    "        'geometry':'geometry', 'COURT_INDEX_NUMBER':'evictions',\n",
     "       'UnitsTotal':'total_units'}\n",
     "evicR.rename(index=str, columns=cols, inplace=True)"
    ]
@@ -1042,7 +1073,7 @@
     }
    ],
    "source": [
-    "# creating ratio\n",
+    "# creating eviction ratio per zipcode as percentage of total units \n",
     "evicR['evic_ratio'] = (evicR['evictions'] / evicR['total_units'])"
    ]
   },
@@ -1073,7 +1104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Removing values\n",
+    "# Further cleaning\n",
     "\n",
     "- Removing zipcodes that have 0 population (there are three instances)\n",
     "- Removing zipcodes that have total number of units less than 100 (this instance occurs also with population 0, so will be removed from exercise to remove 0 values in pop)"
@@ -1231,7 +1262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Download income from ACS"
+    "# Download 2017 5-year income data from ACS"
    ]
   },
   {
@@ -1377,7 +1408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acs17D = acs17.dropna(axis=1, how='all')"
+    "acs17D = acs17.dropna(axis=1, how='all') #dropping NaNs"
    ]
   },
   {
@@ -1406,7 +1437,7 @@
     }
    ],
    "source": [
-    "acs171 = acs17D.loc[(acs17D.income>500)]\n",
+    "acs171 = acs17D.loc[(acs17D.income>500)] # throwing out zips where income is less than 500\n",
     "acs171.shape"
    ]
   },
@@ -1663,6 +1694,7 @@
     }
    ],
    "source": [
+    "# creating income per capita ratio \n",
     "evicFinal['incpp'] = evicFinal['income'] / evicFinal['pop']\n",
     "evicFinal.head()"
    ]
@@ -1697,6 +1729,13 @@
    ],
    "source": [
     "cp(evicFinal, column='evic_pct', cmap='inferno', scheme='fisher_jenks')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Figure 1: A choropleth representing eviction percentages across the five boroughs of NYC. Darker colors denote lower eviction rate, while lighter colors (yellows) denote higher eviction rates. While eviction rates are nominally low across the city, areas that are currently experiencing rapid gentrification (such as Eastern Brooklyn and the Bronx) have comparatively higher eviction rates. It should be noted that the Rockaways are not represented in this figure, either to data loss or non-existent eviction data. "
    ]
   },
   {
@@ -1943,8 +1982,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "litR = litigations[['Boro', 'Zip', 'CaseType', 'CaseOpenDate', 'Penalty', 'Latitude', 'Longitude', \n",
-    "                           'Census Tract']]"
+    "# retaining columns of interest \n",
+    "litR = litigations[['Boro', 'Zip', 'CaseType', 'CaseOpenDate', \n",
+    "                    'Penalty', 'Latitude', 'Longitude', \n",
+    "                    'Census Tract']]"
    ]
   },
   {
@@ -1972,6 +2013,7 @@
     }
    ],
    "source": [
+    "# converting lat/long points to geometry in order to plot them \n",
     "litR['Coordinates'] = list(zip(litR.Longitude, litR.Latitude))\n",
     "litR['Coordinates'] = litR['Coordinates'].apply(Point)"
    ]
@@ -2099,6 +2141,7 @@
     }
    ],
    "source": [
+    "# converting to date time so I am able to extract the year (only want 2017 evictions)\n",
     "litR['CaseOpenDate'] = pd.to_datetime(litR['CaseOpenDate'])\n",
     "litR.head()"
    ]
@@ -2132,6 +2175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# turning litigations data into geo dataframe\n",
     "litG = gpd.GeoDataFrame(litR, geometry='Coordinates')"
    ]
   },
@@ -3940,9 +3984,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PUI2016_Python3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pui2016_python3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3954,7 +3998,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
